# sp1-groth16-go-verifier

./: Cargo.toml  Makefile  README.md  go.mod
output/: verifier_key_hash.hex
program/: Cargo.toml
program/src/: main.rs
src/: prove.rs  verify.rs
verifier/: main.go
