[package]
name = "zk-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
sp1-sdk = "4.0.1"
sp1-zkvm = "4.0.1"
sp1-recursion-gnark-ffi = "4.0.1"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"

[[bin]]
name = "prove"
path = "src/prove.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"



